--- a/Ridh_Online_Shopping.css
+++ b/Ridh_Online_Shopping.css
@@ -14,6 +14,12 @@
 .my-card {
   margin-left: 30px;
 }
+.head-card {
+  color: red;
+}
+.body-card {
+  color: green;
+}
 /* Footer */
 body {
   color: #ccc;
